# seeknal

./: .auto-claude-status  .dockerignore  .env.example  .gitbook.yaml  .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKERDB_DOCUMENTATION_SUMMARY.md  Dockerfile  Dockerfile.gateway  Dockerfile.worker  FINAL_SUMMARY.md  FLOW_INTEGRATION_TEST_RESULTS.md  README.md  build-gcp.sh  build-ghcr.sh  build.sh  config.toml.example  duckdb_feature_store_demo.ipynb  e2e_duckdb_verification.py  e2e_verification.py  feature-store-demo.ipynb  iceberg_detection_research.md  justfile  mkdocs.yml  plan.md  progress.txt  pyproject.toml  quickstart.ipynb  requirements-docs.txt  test_flow_integration.py  test_minimal.py  test_second_order_api.py  ty.toml
.claude/: AGENTS.md  CLAUDE.md  COMMANDS.md  QUICK_START.md  plan-parameterization.md  settings.local.json
.claude/.claude-plugin/: plugin.json
.claude/agents/: architecture-writer-agent.md  backend-agent.md  claude-updater-agent.md  code-reviewer.md  context-gatherer.md  deployment-writer-agent.md  doc-assembler-agent.md  docs-agent.md  frontend-agent.md  mistake-extractor-agent.md  party-architect-agent.md  party-backend-agent.md  party-devops-agent.md  party-docs-agent.md  party-frontend-agent.md  party-pm-agent.md  party-qa-agent.md  party-ux-agent.md  planning-patterns-agent.md  qa-spec-interpreter.md  qa-worker.md  task-analyzer-agent.md  task-planner.md  test-agent.md
.claude/commands/: agents.md  build.md  compound.md  continue-spec.md  continue.md  integrate.md  party.md  plan-w-team.md  ralph-stop.md  retry.md  status.md  validate.md
.claude/hooks/: hooks.json  ralph-stop-hook.sh
.claude/scripts/: hooks.js  ralph-loop.js  state-file.js
.claude/specs/: task-analysis.json
.claude/templates/: ralph-loop-build.md
.github/ISSUE_TEMPLATE/: installation_bug.md
.github/workflows/: ci.yml  docker-worker.yml  docker.yml  docs.yml  publish.yml  pytest.yaml  release.yml
deploy/: Dockerfile.gateway  Dockerfile.worker  Dockerfile.worker.local  deploy-report-server.sh  deploy.sh  docker-compose.report-server.yml  docker-compose.worker.local.yml  docker-compose.worker.yml  docker-compose.yml  nginx.conf
docker/: Dockerfile.gateway  Dockerfile.prefect  Dockerfile.worker  README.md
docker/report-server/: .dockerignore  Dockerfile  README.md
docs/: README.md  atlas-dataset-cli.md  command-verification-script.md  critical-issues-resolution.md  deployment.md  duckdb-flow-guide.md  duckdb-getting-started.md  evaluation-checklist.md  evaluation-template.md  evaluation-tracking.md  getting-started-comprehensive.md  hooks.py  iceberg-materialization.md  index.md  multi-persona-validation-plan.md  planning-patterns.md  production-readiness-assessment.md  project-completion-report.md  ralph-loop-resolution-summary.md  spark-transformers-reference.md  test-complete-summary.md
docs/adr/: adr-001-defense-in-depth-path-security.md  adr-002-warning-based-parameter-collision-handling.md  adr-003-centralized-type-conversion-module.md  adr-004-parameter-name-validation-with-regex.md  adr-005-duckdb-postgres-extension-as-sole-bridge-for-postgresql-io.md  adr-006-multi-target-materialization-dispatcher-with-best-effort-execution.md  adr-007-pythonexecutor-post-execute-parquet-bridge-for-materialization.md  adr-008-repl-three-phase-best-effort-auto-registration.md  adr-009-executioncontext-optional-parameter-with-legacy-fallback-in-dagrunner.md  adr-010-profile-path-round-trip-through-plan-json.md  adr-011-convention-based-namespace-prefixing-with-env-prefix.md
docs/analysis/: compound-report.md  security-fix-analysis.md  task-analysis.json
docs/api/: change-detection.md  core.md  featurestore.md  index.md  interval-tracking.md  tasks.md  workflow.md
docs/assessments/: 2026-02-09-documentation-assessment-report.md  2026-02-09-post-improvement-evaluation.md
docs/audit/: docstring_coverage.md  featurestore_audit.md  tasks_audit.md
docs/brainstorms/: 2026-01-23-sql-repl-brainstorm.md  2026-01-25-draft-apply-workflow.md  2026-01-25-gap-analysis-plan-vs-brainstorm.md  2026-01-26-iceberg-materialization-brainstorm.md  2026-01-27-seeknal-init-python-pipelines-brainstorm.md  2026-01-30-second-order-aggregations-brainstorm.md  2026-02-08-sqlmesh-inspired-features-brainstorm.md  2026-02-09-documentation-redesign-persona-driven.md  2026-02-09-mkdocs-web-documentation-brainstorm.md  2026-02-09-unified-developer-experience-brainstorm.md  2026-02-10-draft-first-tutorials-brainstorm.md  2026-02-10-parameterization-brainstorm.md  (+50 more)
docs/building-blocks/: index.md  (+7 more)
engines/: README.md
examples/: runner_example.py  test_iceberg_materialization.py
logs/: notification.json  post_tool_use.json  pre_tool_use.json  stop.json  subagent_stop.json  user_prompt_submit.json
qa/: README.md
scripts/: download_tutorial_data.py  generate_sample_data.py  sample_data_to_postgres.py  test_concurrency.py
seed/: seed_dev_db.py
spark-engine/: Makefile  build.gradle  gradle.properties  scalastyle-config.xml  settings.gradle
specs/: 2026-02-09-docs-persona-driven-redesign-with-evaluators.md  2026-02-10-run-command-parity-sqlmesh.md  2026-02-20-lineage-inspect-postgresql-materialization-merged.md  2026-02-21-feat-cli-documentation-plan.md  2026-02-21-feat-project-aware-repl-plan-feat-env-aware-iceberg-postgresql-plan-merged.md  documentation-assessment.md  fix-integration-security-issues.md  iceberg-feature-group-materialization.md  phase2-safety-speed.md  second-order-aggregation-docs.md  seeknal-electron-desktop-app.md  sqlmesh-inspired-features.md  world-class-documentation.md
tests/: __init__.py  conftest.py  test_cli.py  test_cli_delete_table.py  test_cli_e2e.py  test_cli_validate_features_e2e.py  test_db_utils.py  test_duckdb.py  test_duckdb_builder_validate.py  test_duckdb_second_aggr.py  test_entity.py  test_feature_validators.py  test_online_table_deletion.py  test_path_security.py  test_runner.py  test_table_file_cleanup.py  test_validation.py
tools/: demo_dispatcher.py  demo_gateway.py  demo_worker.py  run_multi_worker_demo.sh
(+1155 files in other folders)
