[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seeknal"
version = "1.0.1"
description = "All-in-one platform for data and AI/ML engineering"
authors = [
    {name = "Fitra Kacamarga"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "delta-spark==3.2.0",
    "duckdb>=1.1.3",
    "findspark>=2.0.1",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "libsql-experimental>=0.0.41",
    "mack>=0.5.0",
    "pandas>=1.3.0",
    "pendulum>=3.0.0",
    "prefect>=3.1.10",
    "psycopg2-binary>=2.9.0",
    "pyarrow>=18.1.0",
    "pydantic>=2.0.0",
    "pyiceberg>=0.8.1",
    "pyspark>=3.0.0",
    "python-box>=7.3.0",
    "python-decouple>=3.8",
    "python-dotenv>=1.0.1",
    "quinn>=0.10.3",
    "s3fs>=2024.12.0",
    "sqlalchemy>=1.4.0",
    "sqlalchemy-libsql>=0.1.0",
    "sqlmodel>=0.0.22",
    "tabulate>=0.9.0",
    "tenacity>=9.0.0",
    "typer>=0.13.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "icecream>=2.1.3",
    "pytest>=8.3.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/seeknal"]

[tool.hatch.build]
include-package-data = true
packages = ["src/seeknal"]
